# moodle-claw

./: README.md  SKILL.md
edu-sync-cli/: Cargo.toml
edu-sync-cli/src/: main.rs
edu-sync-cli/src/commands/: configure.rs  content.rs  courses.rs  get.rs  mod.rs  output.rs  search.rs  status.rs  sync.rs
